--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -5,9 +5,26 @@
     <title>
         Test
     </title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/task-list.css">
 </head>
 
 <body>
+    <div class="side-bar" id="task-list">
+        <!-- Reference taken: https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp-->
+        <h2 class="side-bar-header" id="task-list-header">Task list</h3>
+        <div class="side-bar-container" id="task-container">
+            <div class="side-bar-element" id="task">
+                <p class="task-description" id="task-description">Example Task</p>
+            </div>
+            <div class="side-bar-element" id="pomo-counter">
+                <p class="task-pomo-estimate" id="task-pomo-estimate">1</p>
+            </div>
+        </div>
+        <button type="button" class="task-list-button" id="fold-button">Extend</button>
+        <button type="button" class="task-list-button" id="add-task-button">+</button>
+    </div>
+    <script src="../js/task-bar-visual.js"></script>
 
     <h1>My First Headin</h1>
     <p>My first paragrph.</p>
