html page unchanged

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
 <head>
-    <title>
-        Test
-    </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pomodoro Timer</title>
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
+  <div id="container">
+    <header>
+      <h1>Pomodoro Timer</h1>
+    </header>
 
-    <h1>My First Headin</h1>
-    <p>My first paragrph.</p>
+    <main>
+        <fieldset id="timer-display">
+          <div id="radio-air-horn-container">
+            <p id="timer-display-box"></p> 
+          </div>
 
+
+
+
+
+          
+
+          <div id="radio-car-horn-container">
+            <input type="radio" id="radio-car-horn" name="radio-sound">
+            <label for="radio-car-horn">Car Horn</label>
+          </div>
+          <div id="radio-party-horn-container">
+            <input type="radio" id="radio-party-horn" name="radio-sound">
+            <label for="radio-party-horn">Party Horn</label>
+</div>
+        </fieldset>
+
+        <audio id="horn-sound" src="./assets/media/audio/air-horn.mp3"></audio>
+
+        <div id="honk-btn-container">
+          <button id="honk-btn" type="submit">Honk</button>
+        </div>
+      </form>
+    </main>
+  </div>
+
+  <script src="./javascript.js"></script>
 </body>
 
 </html>
