2/14/2021 Pre-meeting commit

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -8,16 +8,15 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<body class="background">
+<body id="body" class="background">
   <div id="container">
     <header>
-      <h1>Pomodoro Timer</h1>
+      <h1>Timer Page Temporary Label</h1>
     </header>
 
     <main>
-        <fieldset id="timer-display">
           <div id="timer-page-display-container">
-            <p id="timer-display-box" > 25:00:00 </p> 
+            <p class="timer" id="timer-display-box"  > 25:00:00 </p> 
           </div>
 
           <div id="timer-control-button-container">
@@ -25,7 +24,6 @@
             <!--Add stop button when start button is clicked via javascript event listener--> 
             <!--Add Finished button when start button is clicked via javascript event listener--> 
           </div>
-        </fieldset>
 
         <audio id="alarm-sound" src="../assets/audio/spongebob-screaming-alarm-placeholder.mp3"></audio>
     </main>
