--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="./css/taskList.js" ></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tortellini Timer</title>
 </head>
@@ -12,7 +15,7 @@
         <div class="sidebar">
             <a href="#">N/A</a>
             <a href="#">N/A</a>
-            <a href="#">N/A</a>       
+            <a href="#">N/A</a>
         </div>
         <div class="container">
             <div class="timer">
@@ -28,6 +31,45 @@
         <div class="task">
             <span id="current-task">Task</span>
         </div>
+
+
+        <div class="buttons">
+            <button class="taskList" id = "openTaskList" onclick="openList()">Task List</button>
+        </div>
+
+        <div id="taskList" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeList()">&times;</a>
+          <a href="#">Task List</a>
+
+          <p style="color:white">Task name：</p>
+          <input id = "taskNameInput" type="text">
+          <p style="color:white">Cycles needed：</p>
+          <input id = "cyclesNumInput" type="number">
+
+          <button class = "addtask" id = "addtask" align="right" onclick="addTask()">Add new task</button>
+
+          <ul id="parentUl">
+            <p align="left" style="color:white">Running：</p>
+  			       <li id = "running" style="color:white">
+  			       </li>
+
+  			    <p style="color:white">Pending：</p>
+              <li id = "pending" style="color:white">
+              </li>
+
+            <p style="color:white">Finished：</p>
+              <li id = "finished" style="color:white">
+              </li>
+          </ul>
+
+           </div>
+
+
+        </div>
+
+
+
+
     </main>
     </div>
     <footer>
