--- a/source/site/frontend/index.html
+++ b/source/site/frontend/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html lang="en-us">
-
+<html lang="en">
 <head>
-    <title>
-        Test
-    </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="js/main.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tortellini Timer</title>
 </head>
-
 <body>
-
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
-
+    <div class="background-img">
+    <main>
+        <div class="sidebar">
+            <a href="#">N/A</a>
+            <a href="#">N/A</a>
+            <a href="#">N/A</a>       
+        </div>
+        <div class="container">
+            <div id="timer-string">25:00</div>
+            <div class="buttons">
+                <button class="start">Start</button>
+                <!-- <button class="finish">Finish</button> -->
+            </div>
+            <div class="task">
+                <span id="current-task">Task</span>
+            </div>
+        </div>
+    </main>
+    </div>
+    <footer>
+        <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">Team GitHub</a>
+    </footer>
 </body>
-
 </html>
