Change content of links, add finish early prompt, add pomo label, edit example task content

--- a/source/site/frontend/html/timer_index.html
+++ b/source/site/frontend/html/timer_index.html
@@ -10,11 +10,14 @@
     <div class="background-img">
     <main>
         <div class="sidebar">
-            <a href="#">N/A</a>
-            <a href="#">N/A</a>
-            <a href="#">N/A</a>       
+            <a href="#">Analysis</a>
+            <a href="#">Settings</a>     
         </div>
         <div class="container">
+            <div id="timer-labels">
+                <p id="early-prompt"></p>
+                <p id="timer-label">Waiting</p>
+            </div>
             <div id="timer-container">
                 <p id="timer-string">00:10</p>
             </div>
@@ -25,7 +28,7 @@
                 <!-- <button class="finish">Finish</button> -->
             </div>
             <div class="task">
-                <span id="current-task">Task</span>
+                <span id="current-task">Example Task</span>
             </div>
         </div>
     </main>
