Move audio tag to new html file, add TODO comment

--- a/source/site/frontend/html/timer_index.html
+++ b/source/site/frontend/html/timer_index.html
@@ -31,6 +31,8 @@
                 <span id="current-task">Example Task</span>
             </div>
         </div>
+        <!-- should play when work and break cycles end
+        <audio id="alarm-sound" src="../assets/audio/spongebob-screaming-alarm-placeholder.mp3"></audio> -->
     </main>
     </div>
     <footer>
