changed most of the relative imports to abs paths

--- a/source/index.html
+++ b/source/index.html
@@ -1,72 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="./css/taskList.js" ></script>
+    <script src="css/taskList.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tortellini Timer</title>
 </head>
+
 <body>
     <div class="background-img">
-    <main>
-        <div class="sidebar">
-            <a href="#">N/A</a>
-            <a href="#">N/A</a>
-            <a href="#">N/A</a>
-        </div>
-        <div class="container">
-            <div class="timer">
-                <span id="minutes">25</span>
-                <span class="separator">:</span>
-                <span id="seconds">00</span>
+        <main>
+            <div class="sidebar">
+                <a href="#">N/A</a>
+                <a href="#">N/A</a>
+                <a href="#">N/A</a>
             </div>
-        </div>
-        <div class="buttons">
-            <button class="start">Start</button>
-            <button class="finish">Finish</button>
-        </div>
-        <div class="task">
-            <span id="current-task">Task</span>
-        </div>
+            <div class="container">
+                <div class="timer">
+                    <span id="minutes">25</span>
+                    <span class="separator">:</span>
+                    <span id="seconds">00</span>
+                </div>
+            </div>
+            <div class="buttons">
+                <button class="start">Start</button>
+                <button class="finish">Finish</button>
+            </div>
+            <div class="task">
+                <span id="current-task">Task</span>
+            </div>
 
 
-        <div class="buttons">
-            <button class="taskList" id = "openTaskList" onclick="openList()">Task List</button>
-        </div>
+            <div class="buttons">
+                <button class="taskList" id="openTaskList" onclick="openList()">Task List</button>
+            </div>
 
-        <div id="taskList" class="sidenav">
-          <a href="javascript:void(0)" class="closebtn" onclick="closeList()">&times;</a>
-          <a href="#">Task List</a>
+            <div id="taskList" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeList()">&times;</a>
+                <a href="#">Task List</a>
 
-          <p style="color:white">Task name：</p>
-          <input id = "taskNameInput" type="text">
-          <p style="color:white">Cycles needed：</p>
-          <input id = "cyclesNumInput" type="number">
+                <p style="color:white">Task name：</p>
+                <input id="taskNameInput" type="text">
+                <p style="color:white">Cycles needed：</p>
+                <input id="cyclesNumInput" type="number">
 
-          <button class = "addtask" id = "addtask" align="right" onclick="addTask()">Add new task</button>
+                <button class="addtask" id="addtask" align="right" onclick="addTask()">Add new task</button>
 
-          <ul id="parentUl">
-            <p align="left" style="color:white">Running：</p>
-  			       <li id = "running" style="color:white">
-  			       </li>
+                <ul id="parentUl">
+                    <p align="left" style="color:white">Running：</p>
+                    <li id="running" style="color:white">
+                    </li>
 
-  			    <p style="color:white">Pending：</p>
-              <li id = "pending" style="color:white">
-              </li>
+                    <p style="color:white">Pending：</p>
+                    <li id="pending" style="color:white">
+                    </li>
 
-            <p style="color:white">Finished：</p>
-              <li id = "finished" style="color:white">
-              </li>
-              
-          </ul>
+                    <p style="color:white">Finished：</p>
+                    <li id="finished" style="color:white">
+                    </li>
 
-           </div>
+                </ul>
+
+            </div>
 
 
-        </div>
+    </div>
 
 
 
@@ -77,4 +79,5 @@
         <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">GitHub</a>
     </footer>
 </body>
+
 </html>
