--- a/source/site/frontend/html/settings.html
+++ b/source/site/frontend/html/settings.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Settings</title>
-  <link rel="stylesheet" href="../css/settings.css">
+  <link rel="stylesheet" href="/css/settings.css">
 
 </head>
 
@@ -33,7 +33,7 @@
 
       <div class="tabcontent active">
         <div class="cover-contianer">
-          <img class="avartar" src="../assets/settings/avatar.png" alt="Avatar" style="display:inline-block;
+          <img class="avartar" src="/assets/settings/avatar.png" alt="Avatar" style="display:inline-block;
                   width:100px;  
                   height:100px;
                   background:#555;
@@ -80,9 +80,9 @@
       <div class="tabcontent">
         <div class="cover-contianer">
           <button type="button" style="align-self:center;">
-            <img src="../assets/settings/light.png" style="height: 100px;"></button>
+            <img src="/assets/settings/light.png" style="height: 100px;"></button>
           <button type="button" style="align-self:center;">
-            <img src="../assets/settings/dark.png" style="height: 100px;"></button>
+            <img src="/assets/settings/dark.png" style="height: 100px;"></button>
         </div>
         <div class="option-list">
           <div class="option-container">
@@ -156,7 +156,7 @@
 
       <div class="tabcontent">
         <div class="cover-contianer">
-          <img src="../assets/settings/logo.jfif" alt="team logo" style="height: 150px;">
+          <img src="/assets/settings/logo.jfif" alt="team logo" style="height: 150px;">
         </div>
         <p style="font-size: x-large; font-weight: bold;">
           Team Tortellini
@@ -168,7 +168,7 @@
     </div>
   </div>
   <!-- partial -->
-  <script src="../js/settings.js"></script>
+  <script src="/js/settings.js"></script>
 
 </body>
 
