--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -1,65 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/task-list.css">
+    <link rel="stylesheet" href="/css/timer.css">
+    <link rel="stylesheet" href="/css/task-list.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tortellini Timer</title>
 </head>
+
 <body>
     <div class="background-img">
-    <main>
-        <div class="sidebar">
-            <a href="#">Analysis</a>
-            <a href="#">Settings</a>     
-        </div>
+        <main>
+            <div class="sidebar">
+                <a href="#">Analysis</a>
+                <a href="#">Settings</a>
+            </div>
 
 
-        <div class="side-bar" id="task-list">
-            <!-- Reference taken: https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp-->
-            <h2 class="side-bar-header" id="task-list-header">Task list</h2>
-            <div class="side-bar-container" id="task-container">
-                <div class="side-bar-element" id="task">
-                    <p class="task-description" id="task-description">Example Task</p>
+            <div class="side-bar" id="task-list">
+                <!-- Reference taken: https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp-->
+                <h2 class="side-bar-header" id="task-list-header">Task list</h2>
+                <div class="side-bar-container" id="task-container">
+                    <div class="side-bar-element" id="task">
+                        <p class="task-description" id="task-description">Example Task</p>
+                    </div>
+                    <div class="side-bar-element" id="pomo-counter">
+                        <p class="task-pomo-estimate" id="task-pomo-estimate">1</p>
+                    </div>
                 </div>
-                <div class="side-bar-element" id="pomo-counter">
-                    <p class="task-pomo-estimate" id="task-pomo-estimate">1</p>
+                <button type="button" class="task-list-button" id="fold-button">Extend</button>
+                <button type="button" class="task-list-button" id="add-task-button">+</button>
+            </div>
+
+
+            <div class="container">
+                <div id="timer-labels">
+                    <p id="early-prompt"></p>
+                    <p id="timer-label">Waiting</p>
+                </div>
+                <div id="timer-container">
+                    <p id="timer-string">00:10</p>
+                </div>
+                <div class="control-buttons">
+                    <button class="control" id="start-button">Start</button>
+                    <button class="control" id="emergency-stop-button">Emergency stop</button>
+                    <button class="control" id="overstudy-button">Overstudy</button>
+                    <!-- <button class="finish">Finish</button> -->
+                </div>
+                <div class="task">
+                    <span id="current-task">Example Task</span>
                 </div>
             </div>
-            <button type="button" class="task-list-button" id="fold-button">Extend</button>
-            <button type="button" class="task-list-button" id="add-task-button">+</button>
-        </div>
 
-        
-        <div class="container">
-            <div id="timer-labels">
-                <p id="early-prompt"></p>
-                <p id="timer-label">Waiting</p>
+
+            <div id="taskList" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeList()">&times;</a>
+                <a href="#">Task List</a>
+
+                <p style="color:white">Task name：</p>
+                <input id="taskNameInput" type="text">
+                <p style="color:white">Cycles needed：</p>
+                <input id="cyclesNumInput" type="number">
+
+                <button class="addtask" id="addtask" align="right" onclick="addTask()">Add new task</button>
+
+                <ul id="parentUl">
+                    <p align="left" style="color:white">Running：</p>
+                    <li id="running" style="color:white">
+                    </li>
+
+                    <p style="color:white">Pending：</p>
+                    <li id="pending" style="color:white">
+                    </li>
+
+                    <p style="color:white">Finished：</p>
+                    <li id="finished" style="color:white">
+                    </li>
+
+                </ul>
+
             </div>
-            <div id="timer-container">
-                <p id="timer-string">00:10</p>
-            </div>
-            <div class="control-buttons">
-                <button class="control" id ="start-button">Start</button>
-                <button class="control" id ="emergency-stop-button">Emergency stop</button>
-                <button class="control" id ="overstudy-button">Overstudy</button>
-                <!-- <button class="finish">Finish</button> -->
-            </div>
-            <div class="task">
-                <span id="current-task">Example Task</span>
-            </div>
-        </div>
-        <!-- should play when work and break cycles end
-        <audio id="alarm-sound" src="../assets/audio/spongebob-screaming-alarm-placeholder.mp3"></audio> -->
-    </main>
+
+
+
+
+            <!-- should play when work and break cycles end
+        <audio id="alarm-sound" src="/assets/audio/spongebob-screaming-alarm-placeholder.mp3"></audio> -->
+        </main>
     </div>
     <footer>
         <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">Team GitHub</a>
     </footer>
     <!-- moved the script import to after the site finsihed-->
-    <script type="module" src="../js/main.js"></script>
-    <script src="../js/task-bar-visual.js"></script>
+    <script type="module" src="/js/main.js"></script>
+    <script src="/js/task-bar-visual.js"></script>
+    <script src="/js/taskList.js"></script>
 </body>
+
 </html>
