--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -4,23 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/timer.css">
-    <link rel="stylesheet" href="/css/task-list.css">
+    <!-- <link rel="stylesheet" href="/css/task-list.css"> --> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tortellini Timer</title>
+    <title>Tortellini Timer!</title>
 </head>
 
 <body>
     <div class="background-img">
         <main>
-            <div class="sidebar">
+            <c-settings id="c-settings"></c-settings>
+            <!-- <div class="sidebar">
                 <a href="#">Analysis</a>
                 <a href="#">Settings</a>
-            </div>
+            </div> -->
 
 
-            <div class="side-bar" id="task-list">
-                <!-- Reference taken: https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp-->
+            <!-- <div class="side-bar" id="task-list">
+                <!-- Reference taken: https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp
                 <h2 class="side-bar-header" id="task-list-header">Task list</h2>
+
+                <p style="color:white">Task name：</p>
+                <input id="taskNameInput" type="text">
+                <p style="color:white">Cycles needed：</p>
+                <input id="cyclesNumInput" type="number">
+
                 <div class="side-bar-container" id="task-container">
                     <div class="side-bar-element" id="task">
                         <p class="task-description" id="task-description">Example Task</p>
@@ -30,8 +37,8 @@
                     </div>
                 </div>
                 <button type="button" class="task-list-button" id="fold-button">Extend</button>
-                <button type="button" class="task-list-button" id="add-task-button">+</button>
-            </div>
+                <button type="button" class="task-list-button" id="add-task-button" onclick="addTask()">+</button>
+            </div> -->
 
 
             <div class="container">
@@ -54,7 +61,7 @@
             </div>
 
 
-            <div id="taskList" class="sidenav">
+            <!-- <div id="taskList" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeList()">&times;</a>
                 <a href="#">Task List</a>
 
@@ -80,7 +87,7 @@
 
                 </ul>
 
-            </div>
+            </div> -->
 
 
 
@@ -90,12 +97,15 @@
         </main>
     </div>
     <footer>
-        <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">Team GitHub</a>
+        <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">Visit Team Tortellini@Github</a>
     </footer>
     <!-- moved the script import to after the site finsihed-->
-    <script type="module" src="/js/main.js"></script>
-    <script src="/js/task-bar-visual.js"></script>
-    <script src="/js/taskList.js"></script>
+    <script src="/js/components/incdecinput.js"></script>
+    <script src="/js/components/iostimepicker.js"></script>
+    <script src="/js/components/settings.js"></script>
+    <script src="/js/timer.js"></script>
+    <!-- <script src="/js/task-bar-visual.js"></script>
+    <script src="/js/taskList.js"></script> -->
 </body>
 
 </html>
