--- a/source/index.html
+++ b/source/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="background-img">
-    <main>
         <div class="sidebar">
             <a href="#">N/A</a>
             <a href="#">N/A</a>
             <a href="#">N/A</a>       
         </div>
+    <main class="main-page">
         <div class="container">
             <div class="timer">
                 <span id="minutes">25</span>
@@ -22,8 +22,8 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="start">Start</button>
-            <button class="finish">Finish</button>
+            <button id="start">Start</button>
+            <button id="finish">Finish</button>
         </div>
         <div class="task">
             <span id="current-task">Task</span>
