--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/timer.css">
-    <!-- <link rel="stylesheet" href="/css/task-list.css"> --> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="/css/timer.css" />
+    <!-- <link rel="stylesheet" href="/css/task-list.css"> -->
+    -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tortellini Timer!</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="background-img">
-        <main>
-            <c-settings id="c-settings" style="display: none"></c-settings>
-            <c-task-list id="c-task-list" style="display: none"></c-task-list>
-            <c-control-button onclick="current_state = state_transition(current_state, 'timer_open_settings')">Settings</c-control-button>
-            <c-control-button onclick="current_state = state_transition(current_state, 'timer_toggle_task_list')">Tasklist</c-control-button>
+      <main>
+        <c-settings id="c-settings" style="display: none"></c-settings>
+        <c-task-list id="c-task-list" style="display: none"></c-task-list>
+        <c-control-button
+          onclick="state_transition('timer_open_settings')"
+          >Settings</c-control-button
+        >
+        <c-control-button
+          onclick="state_transition(timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')"
+          >Tasklist</c-control-button
+        >
 
-            <!-- <div class="sidebar">
+        <!-- <div class="sidebar">
                 <a href="#">Analysis</a>
                 <a href="#">Settings</a>
             </div> -->
 
-
-            <!-- <div class="side-bar" id="task-list">
+        <!-- <div class="side-bar" id="task-list">
                 <!-- Reference taken: https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp
                 <h2 class="side-bar-header" id="task-list-header">Task list</h2>
 
@@ -44,29 +49,29 @@
                 <button type="button" class="task-list-button" id="add-task-button" onclick="addTask()">+</button>
             </div> -->
 
-
-            <div class="container">
-                <div id="timer-labels">
-                    <p id="early-prompt"></p>
-                    <p id="timer-label">Waiting</p>
-                </div>
-                <c-timer-display></c-timer-display>
-                <div class="control-buttons">
-                    <!-- <button class="control" id="start-button">Start</button> -->
-                    <c-control-button id="start-button">Start</c-control-button>
-                    <c-control-button id="emergency-stop-button">Emergency stop</c-control-button>
-                    <c-control-button id="overstudy-button">Overstudy</c-control-button>
-                    <!-- <button class="control" id="emergency-stop-button">Emergency stop</button>
+        <div class="container">
+          <div id="timer-labels">
+            <p id="early-prompt"></p>
+            <p id="timer-label">Waiting</p>
+          </div>
+          <c-timer-display id="timer-display"></c-timer-display>
+          <div class="control-buttons">
+            <!-- <button class="control" id="start-button">Start</button> -->
+            <c-control-button id="start-button" onclick="state_transition('timer_during_countdown')">Start</c-control-button>
+            <c-control-button id="emergency-stop-button" onclick="state_transition('timer_emergency_stop')"
+              >Emergency stop</c-control-button
+            >
+            <c-control-button id="overstudy-button" onclick="state_transition('timer_finished_early')">Overstudy</c-control-button>
+            <!-- <button class="control" id="emergency-stop-button">Emergency stop</button>
                     <button class="control" id="overstudy-button">Overstudy</button> -->
-                    <!-- <button class="finish">Finish</button> -->
-                </div>
-                <div class="task">
-                    <span id="current-task">Example Task</span>
-                </div>
-            </div>
+            <!-- <button class="finish">Finish</button> -->
+          </div>
+          <div class="task">
+            <span id="current-task">Example Task</span>
+          </div>
+        </div>
 
-
-            <!-- <div id="taskList" class="sidenav">
+        <!-- <div id="taskList" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeList()">&times;</a>
                 <a href="#">Task List</a>
 
@@ -94,18 +99,16 @@
 
             </div> -->
 
-
-
-
-            <!-- should play when work and break cycles end
+        <!-- should play when work and break cycles end
         <audio id="alarm-sound" src="/assets/audio/spongebob-screaming-alarm-placeholder.mp3"></audio> -->
-        </main>
+      </main>
     </div>
     <footer>
-        <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">Visit Team Tortellini@Github</a>
+      <a href="https://github.com/ycyao216/cse110-w21-group17/wiki"
+        >Visit Team Tortellini@Github</a
+      >
     </footer>
     <!-- moved the script import to after the site finsihed-->
-
 
     <!-- State Machines -->
     <script src="/js/state_machines/state_machine.js"></script>
@@ -118,13 +121,11 @@
     <script src="/js/components/task-list.js"></script>
     <script src="/js/components/settings.js"></script>
 
-
     <!-- This Page -->
-    <script src="/js/state_machines/time_logic.js"></script>
+    <script src="/js/state_machines/timing_logic.js"></script>
     <script src="/js/state_machines/timer_state_machine.js"></script>
     <script src="/js/timer.js"></script>
     <!-- <script src="/js/task-bar-visual.js"></script>
     <script src="/js/taskList.js"></script> -->
-</body>
-
+  </body>
 </html>
