End of meeting w/ Liam&Harry

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -44,7 +44,7 @@
             >
             <c-control-button
               id="overstudy-button"
-              onclick="state_transition('timer_finished_early')"
+              onclick="alert(OVERSTUDY_MSG)"
               >Overstudy</c-control-button
             >
           </div>
