created modals for alert popups

--- a/source/site/frontend/html/timer_index.html
+++ b/source/site/frontend/html/timer_index.html
@@ -25,7 +25,16 @@
                 <button class="control" id ="start-button">Start</button>
                 <button class="control" id ="emergency-stop-button">Emergency stop</button>
                 <button class="control" id ="overstudy-button">Overstudy</button>
-                <!-- <button class="finish">Finish</button> -->
+            </div>
+            <div class="modal" id="modal-popup">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p id="modal-text">i love cse110</p>
+                    <div id="emergency-stop-buttons">
+                        <button id="confirm-button">Confirm</button>
+                        <button id="cancel-button">Cancel</button>
+                    </div>
+                </div>
             </div>
             <div class="task">
                 <span id="current-task">Example Task</span>
