--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -60,7 +60,7 @@
             <c-control-button
               id="overstudy-button"
               class="finish"
-              onclick="state_transition('timer_finished_early')"
+              onclick="document.getElementById('c-modal').display_alert(OVERSTUDY_MSG)"
               >Overstudy</c-control-button
             >
           </div>
