--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -19,7 +19,7 @@
             <c-control-button onclick="state_transition(timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">Tasklist</c-control-button>
             <c-control-button onclick="state_transition(timer_init == window.current_state ? 'timer_open_analysis' : 'timer_init')">Analysis</c-control-button>
             <c-control-button onclick="document.getElementById('c-modal').display_alert('test alert')">Alert</c-control-button>
-            <c-control-button onclick="document.getElementById('c-modal').display_confirm('test confirmation', () => {}, () => {})">confirm</c-control-button>
+            <c-control-button onclick="document.getElementById('c-modal').display_confirm('test confirmation', () => {}, () => {})">Confirm</c-control-button>
 
             <div class="container">
                 <div id="timer-labels">
