convert everything to modules (to make jest and html both work)

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -48,26 +48,7 @@
     <footer>
         <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">Visit Team Tortellini@Github</a>
     </footer>
-    <!-- moved the script import to after the site finsihed-->
-
-    <!-- State Machines -->
-    <script src="/js/state_machines/state_machine.js"></script>
-
-    <!-- Components -->
-    <script src="/js/components/incdecinput.js"></script>
-    <script src="/js/components/time-picker.js"></script>
-    <script src="/js/components/timer-display.js"></script>
-    <script src="/js/components/control-button.js"></script>
-    <script src="/js/components/modal.js"></script>
-    <script src="/js/components/task-list.js"></script>
-    <script src="/js/components/analysis.js"></script>
-    <script src="/js/components/settings.js"></script>
-
-    <!-- This Page -->
-    <script src="/js/state_machines/timer_state_machine.js"></script>
-    <script src="/js/timer.js"></script>
-    <!-- <script src="/js/task-bar-visual.js"></script>
-    <script src="/js/taskList.js"></script> -->
+    <script type="module" src="/js/timer.js"></script>
 </body>
 
 </html>
