--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -33,8 +33,8 @@
                 <div class="control-buttons">
                     <!-- <button class="control" id="start-button">Start</button> -->
                     <c-control-button id="start-button" class="start" onclick="state_transition('timer_during_countdown')">Start</c-control-button>
-                    <c-control-button id="emergency-stop-button" class="finish" onclick="state_transition('timer_emergency_stop')">Emergency stop</c-control-button>
-                    <c-control-button id="overstudy-button" class="finish" onclick="document.getElementById('c-modal').display_alert(OVERSTUDY_MSG)">Overstudy</c-control-button>
+                    <c-control-button id="emergency-stop-button" class="finish" onclick="state_transition('timer_emergency_stop')">Emergency Stop</c-control-button>
+                    <c-control-button id="overstudy-button" class="finish" onclick="document.getElementById('timer-display').trigger_finish_early()">Finished Early</c-control-button>
                 </div>
                 <div class="task">
                     <span id="current-task">Example Task</span>
