--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="google-signin-client_id" content="701536274092-ou0ungjmlt7gij8e8huot10nu96lr2tf.apps.googleusercontent.com">
     <link rel="stylesheet" href="/css/timer.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tortellini Timer!</title>
@@ -21,6 +22,7 @@
                 <c-control-button onclick="window.current_state = transition(window.current_state, timer_init == window.current_state ? 'timer_open_analysis' : 'timer_init')">Analysis</c-control-button>
                 <c-control-button onclick="document.getElementById('c-modal').display_alert('test alert')">Alert</c-control-button>
                 <c-control-button onclick="document.getElementById('c-modal').display_confirm('test confirmation', () => {}, () => {})">Confirm</c-control-button>
+                <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
             </div>
             
             <div class="container">
@@ -50,6 +52,8 @@
     <footer>
         <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">Visit Team Tortellini@Github</a>
     </footer>
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script type="module" src="/js/timer.js"></script>
 </body>
 
