Add event listeners to handle updating Example Task and add event dispatched for finish early button

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -38,7 +38,7 @@
                     <c-control-button id="add-cycle-button" class="finish" onclick="document.getElementById('timer-display').trigger_add_cycle()">Add Cycle</c-control-button>
                 </div>
                 <div class="task">
-                    <span id="current-task">Example Task</span>
+                    <span id="current-task">Example Task</span> <!-- window.task_list.current_task.stringify() -->
                 </div>
             </div>
 
