--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <LINK REL="SHORTCUT ICON" HREF="/assets/images/doodle-bob-background-placeholder.jpg"> 
     <meta name="google-signin-client_id" content="701536274092-ou0ungjmlt7gij8e8huot10nu96lr2tf.apps.googleusercontent.com">
     <link rel="stylesheet" href="/css/timer.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
