Co-authored-by: Yunchao Yao <ycyao216@users.noreply.github.com>

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -16,10 +16,10 @@
             <c-analysis id="c-analysis" style="display: none"></c-analysis>
             <c-task-list id="c-task-list" style="display: initial"></c-task-list>
             <c-control-button onclick="state_transition('timer_open_settings')">Settings</c-control-button>
-            <c-control-button onclick="state_transition(timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">Tasklist</c-control-button>
-            <c-control-button onclick="state_transition(timer_init == window.current_state ? 'timer_open_analysis' : 'timer_init')">Analysis</c-control-button>
+            <c-control-button id = 'task-list-animate'>Tasklist</c-control-button>
+            <!-- <c-control-button onclick="state_transition(timer_init == window.current_state ? 'timer_open_analysis' : 'timer_init')">Analysis</c-control-button>
             <c-control-button onclick="document.getElementById('c-modal').display_alert('test alert')">Alert</c-control-button>
-            <c-control-button onclick="document.getElementById('c-modal').display_confirm('test confirmation', () => {}, () => {})">Confirm</c-control-button>
+            <c-control-button onclick="document.getElementById('c-modal').display_confirm('test confirmation', () => {}, () => {})">Confirm</c-control-button> -->
 
             <div class="container">
                 <div id="timer-labels">
@@ -35,7 +35,7 @@
                     <c-control-button id="start-button" class="start" onclick="document.getElementById('timer-display').trigger_start()">Start</c-control-button>
                     <c-control-button id="emergency-stop-button" class="finish" onclick="document.getElementById('timer-display').trigger_emergency_stop_prompt()">Emergency Stop</c-control-button>
                     <c-control-button id="overstudy-button" class="finish" onclick="document.getElementById('timer-display').trigger_finish_early()">Finished Early</c-control-button>
-                    <c-control-button id="add-cycle-button" class="finish" onclick="document.getElementById('timer-display').trigger_add_cycle()">Add Cycle</c-control-button>
+                    <c-control-button id="add-cycle-button" class="finish" onclick="window.task_list.upon_overtime()">Add Cycle</c-control-button>
                 </div>
                 <div class="task">
                     <span id="current-task">Example Task</span> <!-- window.task_list.current_task.stringify() -->
