--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -13,6 +13,7 @@
 <body>
     <div class="background-img">
         <main>
+            <c-task></c-task>
             <c-modal id="c-modal"></c-modal>
             <c-settings id="c-settings" style="display: none"></c-settings>
             <c-analysis id="c-analysis" style="display: none"></c-analysis>
@@ -21,7 +22,7 @@
                 <c-control-button onclick="window.current_state = transition(window.current_state, 'timer_open_settings')">Settings</c-control-button>
                 <c-control-button onclick="window.current_state = transition(window.current_state, timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">Tasklist</c-control-button>
                 <c-control-button onclick="window.current_state = transition(window.current_state, timer_init == window.current_state ? 'timer_open_analysis' : 'timer_init')">Analysis</c-control-button>
-                <c-control-button onclick="document.getElementById('c-modal').display_alert('test alert')">Alert</c-control-button>
+                <c-control-button onclick="document.getElementById('c-task-list').refresh_list()">Alert</c-control-button>
                 <c-control-button onclick="document.getElementById('c-modal').display_confirm('test confirmation', () => {}, () => {})">Confirm</c-control-button>
                 <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
             </div>
