--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -38,7 +38,7 @@
                     <c-control-button id="add-cycle-button" class="finish" onclick="window.task_list.upon_overtime()">Add Cycle</c-control-button>
                 </div>
                 <div class="task">
-                    <span id="current-task">Example Task</span> <!-- window.task_list.current_task.stringify() -->
+                    <span id="current-task">No current running task</span> <!-- window.task_list.current_task.stringify() -->
                 </div>
             </div>
 
