--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -19,9 +19,9 @@
             <c-analysis id="c-analysis" style="display: none"></c-analysis>
             <c-task-list id="c-task-list" style="display: initial"></c-task-list>
             <div class="top-bar-buttons">
-                <c-control-button onclick="window.current_state = transition(window.current_state, 'timer_open_settings')">Settings</c-control-button>
-                <c-control-button onclick="window.current_state = transition(window.current_state, timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">Tasklist</c-control-button>
-                <c-control-button onclick="window.current_state = transition(window.current_state, timer_init == window.current_state ? 'timer_open_analysis' : 'timer_init')">Analysis</c-control-button>
+                <c-control-button onclick="transition(window.current_state, 'timer_open_settings')">Settings</c-control-button>
+                <c-control-button onclick="transition(window.current_state, timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">Tasklist</c-control-button>
+                <c-control-button onclick="transition(window.current_state, timer_init == window.current_state ? 'timer_open_analysis' : 'timer_init')">Analysis</c-control-button>
                 <c-control-button onclick="document.getElementById('c-task-list').refresh_list()">Alert</c-control-button>
                 <c-control-button onclick="document.getElementById('c-modal').display_confirm('test confirmation', () => {}, () => {})">Confirm</c-control-button>
                 <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
