--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -13,7 +13,6 @@
 <body>
     <div class="background-img">
         <main>
-            <c-task></c-task>
             <c-modal id="c-modal"></c-modal>
             <c-settings id="c-settings" style="display: none"></c-settings>
             <c-analysis id="c-analysis" style="display: none"></c-analysis>
@@ -38,7 +37,11 @@
                 <c-timer-display id="timer-display"></c-timer-display>
                 <div class="control-buttons">
                     <!-- <button class="control" id="start-button">Start</button> -->
-                    <c-control-button id="start-button" class="start" onclick="document.getElementById('timer-display').trigger_start()">Start</c-control-button>
+                    <c-control-button id="start-button" class="start" 
+                    onclick="{
+                        if (current_task() == null) window.advance_task();
+                        if (current_task() != null) document.getElementById('timer-display').trigger_start()
+                        }">Start</c-control-button>
                     <c-control-button id="emergency-stop-button" class="finish" onclick="document.getElementById('timer-display').trigger_emergency_stop_prompt()">Emergency Stop</c-control-button>
                     <c-control-button id="overstudy-button" class="finish" onclick="document.getElementById('timer-display').trigger_finish_early()">Finished Early</c-control-button>
                     <c-control-button id="add-cycle-button" class="finish" onclick="document.getElementById('timer-display').trigger_add_cycle()">Add Cycle</c-control-button>
