change back to /js/timer.js in timer.html

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -81,6 +81,6 @@
       >
     </footer>
 
-    <script type="module" src="/js-trans/timer.js"></script>
+    <script type="module" src="/js/timer.js"></script>
   </body>
 </html>
